--- a/gb/20/3/1/n11906086.md
+++ b/gb/20/3/1/n11906086.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bbfwc2554/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bbfwc2554/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/bbfwc2554/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bbfwc2554/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bbfwc2554/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bbfwc2554/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bbfwc2554/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qmsvrr394/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qmsvrr394/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qmsvrr394/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qmsvrr394/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>以学术期刊指标评估科研成果 科学家提异议</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/03/vtPI2f_n-600x400.jpeg" />
 <h6>（ShutterStock）
 </h6>
 <hr>
-<p>【大纪元2020年03月01日讯】（大纪元记者刘薇编译）学术评估在科研领域发挥着至关重要的作用，然而，如何对科研人员的学术能力及成果进行客观评估却并非易事。多年来，专家们以发表论文的期刊的影响因子以及该论文被引用次数的多少作为对论文作者的评估依据，但近日，来自九个国家和地区的十四位自然科学家对现行评估体系提出异议并指出，过分使用这些指标反倒会给科研质量带来负面效应。</p>
+	<p>【大纪元2020年03月01日讯】（大纪元记者刘薇编译）学术评估在科研领域发挥着至关重要的作用，然而，如何对科研人员的学术能力及成果进行客观评估却并非易事。多年来，专家们以发表论文的期刊的影响因子以及该论文被引用次数的多少作为对论文作者的评估依据，但近日，来自九个国家和地区的十四位自然科学家对现行评估体系提出异议并指出，过分使用这些指标反倒会给科研质量带来负面效应。</p>
 <p>持此观点的相关论文发表于《皇家学会学报B》（Proceedings of Royal Society B），其主要作者是乔治华盛顿大学（George Washington University）人类学系的查普曼（Colin Chapman）教授和奥斯陆大学（University of Oslo）的史丹斯（Nils Chr. Stenseth）教授。文章认为，现行评估体系适用于卓有经验的科学家们，但由于人们对其不当的使用方式，却给年轻学者及其职业发展带来了困扰，而且，对于这些指标的过分依赖正在将人们的注意力带离科研本身。</p>
 <h2>现行学术评估体系的操作标准</h2>
-<p>通常，科研人员会围绕其研究方法和成果撰写论文并向<a href="https://github.com/bbfwc2554/djy/blob/master/gb/tag/%E5%AD%A6%E6%9C%AF%E6%9C%9F%E5%88%8A.md">学术期刊</a>投稿。期刊编辑再将其发给该领域的专家进行评审以决定是否接受该论文。如果论文最终得以发表，其他研究人员也可以在自己的著作中对其进行引用。而引用数量的多少则成为评判该论文质量的标准。</p>
+<p>通常，科研人员会围绕其研究方法和成果撰写论文并向<ahref="https://github.com/qmsvrr394/djy/blob/master/gb/tag/%E5%AD%A6%E6%9C%AF%E6%9C%9F%E5%88%8A.md#1">学术期刊</a>投稿。期刊编辑再将其发给该领域的专家进行评审以决定是否接受该论文。如果论文最终得以发表，其他研究人员也可以在自己的著作中对其进行引用。而引用数量的多少则成为评判该论文质量的标准。</p>
 <p>另一重要的评估标准是发表该论文的期刊的“影响因子”，即前两年在该期刊上发表的每篇论文的平均被引用次数。最负盛名的期刊，如人们熟知的《自然》（Nature）、《科学》（Science）和《柳叶刀》（The Lancet）等，有着最高的影响因子。很多人认为，只有发表在影响因子高的期刊上的研究才是有价值的。</p>
 <h2>现行学术评估体系的缺陷</h2>
 <p>大约十年前，史丹斯在欧洲科学研究理事会（European Research Council）的评估委员会任职时，曾与其他委员们讨论了这些评估指标的使用，“我们中有些人认为引用数量并不重要，因此就去阅读论文原文。”</p>
@@ -20,47 +20,46 @@
 <p>查普曼表示，希望年轻学者能意识到该系统的缺陷并予以修正。当你过度关注论文在哪里发表、被引用了多少次以及其期刊的影响因子时，自己的注意力会离开科研本身。而在某些独特的小领域中，即便是非常优秀的科研成果也不大可能获得很多的引用次数。因此，“学者们应该停止关注这些指标，而要去重新阅读论文本身”。</p>
 <p>该文章的十四位著者总结说：“我们希望能就此引发一场讨论，以塑造学术界的未来并朝着更积极的方向发展。科学家拥有能够解决社会需求的最具创造力的头脑。现在是时候来打造我们想要的未来了。”◇</p>
 <p>责任编辑：朱涵儒</p>
-
+	
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/20/3/1/n11906086.htm">以学术期刊指标评估科研成果 科学家提异议</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/18/6/5/n10457052.htm">大学学习：做好这九步 成功完成作业（三）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/29/n10437043.htm">大学学习：做好这九步 成功完成作业（二）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/5/23/n10419796.htm">大学学习：做好这九步 成功完成作业（一）</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/3/9/n10203031.htm">12年级毕业成为大一新生 你要注意什么</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/5/15/n9146146.htm">英国大学考试季“驾到” 考前冲刺有妙招</a></li>
-> <li><a href="https://www.epochtimes.com/gb/17/1/19/n8721729.htm">写作关联力：品格篮球队</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/20/n8414529.htm">大学生活宝鉴（8）：大学生必备技能 如何做阅读笔记</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/10/5/n8368603.htm">大学生活宝鉴（7）：大学生阅读学术论文的必备技能</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/23/n8229165.htm">大学生活宝鉴（5）：大学生如何管理学习压力</a></li>
-> <li><a href="https://www.epochtimes.com/gb/16/8/8/n8180536.htm">大学生活宝鉴（4）：如何应对小组作业中的偷懒者</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/12/n11864598.htm">胎记是契约？再续前世缘</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883841.htm">【新闻看点】中共驱逐美3记者 真正原因不说</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881829.htm">【拍案惊奇】新病毒无特效药 病患求生要闯2关</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/13/n11866471.htm">【三国英雄13】官渡之战曹操获胜的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881404.htm">北京西城成疫情重灾区 财政部员工住宅楼染疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11880959.htm">当官的吃不完 贵州援助鄂州蔬菜烂在仓库</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879605.htm">【翻墙必看】分析：中国粮食危机再浮出水面</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万?罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881805.htm">搭飞机和计程车留意这些事 降传染风险</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/11/1/20/n3148000.md#1">学术期刊连年涨 美学生串联他国抗议</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/11/3/3/n3186115.md#1">揭开大陆学术期刊的灰色版面费</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/10/24/n10805563.md#1">学术不端 南京大学女教授百余篇论文被撤稿</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/12/14/n10911636.md#1">长江学者梁莹获七项处分？南京大学回应</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/bbfwc2554/djy/blob/master/gb/20/3/1/n11906086.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bbfwc2554/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bbfwc2554/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bbfwc2554/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bbfwc2554/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bbfwc2554/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513937.md#1" target="_blank">摧毁传统乡绅制与现代法治基础的痞子运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/1/n10824187.md#1" target="_blank">一本书让70岁的她成为有福人</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/15/n12880731.md#1">【馨香雅句】王羲之的书法老师竟是她</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/18/n12887969.md#1">【小宇宙传说】宇宙中最大谜题：什么是时间？</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/20/n12891592.md#1">【未解之谜】轰动世界的巴克斯特实验</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/23/n12899457.md#1">【命理】混迹绿林怎能得福寿善报？</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12903028.md#1">【小宇宙传说】死亡是生命结束？天上有摄像机</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12903156.md#1">【横河观点】美国媒体人如何吃中共的嘴软</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902456.md#1">【拍案惊奇】日防长警告防台赤化 日媒：别再救中共</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12901728.md#1">【时事军事】太空战争有多近 出乎你我预料</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902826.md#1">中共推“工龄归零” 重庆受害者叹活不下去</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902419.md#1">台湾中央气象局：台南高屏花莲4县市大雨特报</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12903007.md#1">印度疫情如“海啸”首都每4分钟1人死亡</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/23/n12901477.md#1">杜汶泽脸书宣布：旗下网台永久聘用蔡玉玲</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/23/n12901216.md#1">赵丽颖冯绍峰离婚登热搜 21亿点阅量被消失</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12904623.md#1">台上献唱撞脸刘德华 港星江华模样惊呆网友</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902527.md#1">《父亲》影评：出色的演员与剧本 成就优质电影</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903597.md#1">林逸欣情定7年男友 曝婚讯“一起慢慢变老”</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/23/n12900193.md#1">微波炉最危险不是辐射 做错2件事当心受伤、吃进毒素</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903574.md#1">竹笋撑破湖南学校宿舍水泥地 快长到天花板</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/21/n12894418.md#1">500度以下近视眼能痊愈？2招改善视力</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/19/n12890228.md#1">出发啰！在美国骑自行车必知10项安全规则</a></li>
+<li><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903393.md#1">美国田径赛杀出“程咬金” 小狗乱入冲第一</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qmsvrr394/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qmsvrr394/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/3/1/n11906086.htm">以学术期刊指标评估科研成果 科学家提异议</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qmsvrr394/djy/blob/master/gb/20/3/1/n11906086.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qmsvrr394/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qmsvrr394/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qmsvrr394/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qmsvrr394/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qmsvrr394/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
